fix footnotes numbering on safari

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -283,6 +283,7 @@ div.footnotes p {
 div.footnotes ol {
   padding: 10px 0px 10px 30px;
   list-style: telugu;
+  list-style-position: inside;
 }
 
 div.footnotes li:target {
